module12/istio/http-gw/istio-specs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpserver
spec:
  gateways:
    - httpserver
  hosts:
    - httpserver.cncamp.io
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: httpserver.system
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - httpserver.cncamp.io
      port:
        name: http
        number: 80
        protocol: HTTP
